# mimegrep

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac  decode.c  mgrep.1  mgrep.1.in  mgrep.c
